[gd_scene load_steps=6 format=3 uid="uid://b8x4j502k1qam"]

[ext_resource type="Script" path="res://AI_System/scripts/wave_manager.gd" id="1_h9k7n"]
[ext_resource type="Resource" path="res://AI_System/resources/wave_1_config.tres" id="2_m8p3q"]
[ext_resource type="Resource" path="res://AI_System/resources/wave_2_config.tres" id="3_r5t2l"]
[ext_resource type="Resource" path="res://AI_System/resources/wave_boss_config.tres" id="4_j1n6k"]
[ext_resource type="Script" path="res://AI_System/scripts/wave_ui_controller.gd" id="5_ui_ctrl"]

[node name="WaveSystem" type="Node"]
script = ExtResource("1_h9k7n")
wave_configs = Array[WaveConfig]([ExtResource("2_m8p3q"), ExtResource("3_r5t2l"), ExtResource("4_j1n6k")])
loop_waves = false
difficulty_multiplier = 1.3
spawners = Array[AISpawner]([])
distribute_spawning = true

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("5_ui_ctrl")

[node name="TopPanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 100.0

[node name="WaveLabel" type="Label" parent="UI/TopPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -15.0
offset_right = 200.0
offset_bottom = 15.0
text = "Wave 1: First Contact"
vertical_alignment = 1

[node name="EnemyCountLabel" type="Label" parent="UI/TopPanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -15.0
offset_right = -20.0
offset_bottom = 15.0
text = "Enemies: 5"
horizontal_alignment = 2
vertical_alignment = 1

[node name="WaveProgressBar" type="ProgressBar" parent="UI/TopPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -30.0
offset_right = 150.0
offset_bottom = -10.0
max_value = 100.0

[node name="Controls" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -120.0
offset_right = -20.0
offset_bottom = -20.0

[node name="StartButton" type="Button" parent="UI/Controls"]
layout_mode = 2
text = "Start Waves"

[node name="NextWaveButton" type="Button" parent="UI/Controls"]
layout_mode = 2
text = "Skip to Next Wave"

[node name="StopButton" type="Button" parent="UI/Controls"]
layout_mode = 2
text = "Stop Waves"